--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.2",
     "gh-pages": "^3.2.3",
+    "jquery": "^3.6.0",
     "pretty": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "build-localhost": "PUBLIC_URL=/ react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
